Added a P tag to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
   <title>This is my awesome web page </title>
   <h1> Welcome to my awesome webpage </h1>
+  <p>Hi! This is my first time trying to do what I really don't like. </p>
 </html>
